# library_api

./: .gitignore  README.md  library.db  pyproject.toml  requirements.txt
library_api/: handlers.py  load.py  loadSeeds.py  models.py  prueba.py  server.py  urls.py
library_api/migration/: migration.py
library_api/seeds/: books.json
tests/: test_api.py
