[tool.poetry]
name = "library-api"
version = "0.1.0"
description = ""
authors = ["lam1391 <lam.aguilar91@gmail.com>"]
readme = "README.md"
packages = [{include = "librery_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
